--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--suppress AndroidDomInspection -->
+<?xml version="1.0" encoding="utf-8"?><!-- suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.matatabi.crudretrofit">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
 
     <application
         android:allowBackup="true"
@@ -17,7 +15,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA01Y6Y9J-KzWa8vbisZis7H6edCEtIBN8" />
@@ -45,6 +46,11 @@
         <activity
             android:name=".DetailLatlngActivity"
             android:label="@string/title_activity_detail_latlng" />
+        <activity android:name=".PolygonDemoActivity" />
+        <activity android:name=".CircleDemoActivity" />
+        <activity android:name=".AddMahasiswaActivity" />
+        <activity android:name=".ReadMhsActivity" />
+        <activity android:name=".DetailMhsActivity"></activity>
     </application>
 
 </manifest>
